# Globally-Optimized-Superword-LevelParallelism---LLVM

./: .gitignore  README.md
GoSLP/: CMakeLists.txt  half_run.sh  run.sh
GoSLP/GoSLPPass/: CMakeLists.txt  CandidatePacks.cpp  CandidatePacks.hpp  Emit.cpp  Emit.hpp  GoSLPPass.cpp  ILP.cpp  ILP.hpp  PermuteDP.cpp  PermuteDP.hpp  Reduction.cpp  Reduction.hpp  ShuffleCost.cpp  ShuffleCost.hpp  VecGraph.cpp  VecGraph.hpp
GoSLP/bench/: bench.cpp  bench.sh  plot_results.py  suite.cpp
GoSLP/bench/results/: baseline.s  compile.csv  compile_baseline.time  compile_goslp_link.time  compile_goslp_opt.time  goslp.s  phase2_compiletime_before_after.csv  runtime.csv
GoSLP/testPass/: CMakeLists.txt  Pass.cpp
GoSLP/tests/: evensimpler.c  run_validation.sh  simpleload.c  supersimple.c  usablesupersimple.c
GoSLP/tests/kernels/: mismatch_ops.c  pair_add4_store.c  pair_add_store.c  pair_muladd_store.c
src/cpp/: CandidatePacks.cpp  Emit.cpp  GoSLPPass.cpp  ILP.cpp  ShuffleCost.cpp  VecGraph.cpp
